# napari-annotatorj

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  install.bat  install.sh  mkdocs.yml  pyproject.toml  setup.cfg  startup_napari.bat  startup_napari.sh  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: deploy.yaml  only_test.yml  plugin_preview.yml
.napari/: DESCRIPTION.md  config.yml
.napari-hub/: DESCRIPTION.md
docs/: index.md
src/napari_annotatorj/: __init__.py  _dock_widget.py  _function.py  _reader.py  _writer.py  build_napari_annotatorj.bat  load_image.py  load_imagej_roi.py  napari.yaml  predict_unet.py  startup_annotatorj.py
src/napari_annotatorj/_tests/: mimic_roiloading_frommask.py  mimic_roiloading_fromtext.py  test_annotatorj_fcns.py  test_dock_widget.py  test_function.py  test_reader.py  test_writer.py
src/napari_annotatorj/hooks/: hook-napari.py
src/napari_annotatorj/unet/: model.py
