[metadata]
name = napari-annotatorj
version = 0.0.2
author = Reka Hollandi
author_email = reka.hollandi@gmail.com
url = https://github.com/spreka/napari-annotatorj
license = BSD-3-Clause
description = The napari adaptation of the ImageJ/Fiji plugin AnnotatorJ for easy image annotation.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers = 
	Development Status :: 3 - Alpha	
	Intended Audience :: Developers
	Framework :: napari
	Topic :: Software Development :: Testing
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Operating System :: OS Independent
	License :: OSI Approved :: BSD License
project_urls = 
	Bug Tracker = https://github.com/spreka/napari-annotatorj/issues
	Documentation = https://github.com/spreka/napari-annotatorj#README.md
	Source Code = https://github.com/spreka/napari-annotatorj
	User Support = https://github.com/spreka/napari-annotatorj/issues

[options]
packages = find_namespace:
python_requires = >=3.7
package_dir = 
	=src
# add your package requirements here
install_requires = 
	napari-plugin-engine>=0.1.4
	numpy
	roifile
	scikit-image
	opencv-python>=4.5.5.62
	keras
	tensorflow-gpu>=2.5.0
	tifffile
	imagecodecs
include_package_data = True

[options.packages.find]
where = src

[options.entry_points]
napari.manifest = 
	napari-annotatorj = napari_annotatorj:napari.yaml

[options.package_data]
napari_annotatorj = [napari.yaml, icon/*.svg]
